Created responsive menu layout, refactored a bit of js code

--- a/index.html
+++ b/index.html
@@ -18,7 +18,20 @@
             </div>
         </div>
         <div class="menu-container" style="display: none">
-            <button id="start-game-button" onclick="StartGame()">Start Game</button>
+            <h2>Start page</h2>
+            <div class="settings-container">
+                <div class="players-container">
+                    <div class=player-name-container>
+                        <h3>Player1</h3>
+                        <input type="text" value="player1">
+                    </div>
+                    <div class=player-name-container>
+                        <h3>Player2</h3>
+                        <input type="text" value="player2">
+                    </div>
+                </div>
+                <button id="start-game-button" onclick="StartGame()">Start Game</button>
+            </div>
         </div>
         <div class="game-container">
             <div class="table-container">
