Added reading in the player's name

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <h2>Start page</h2>
             <div class="settings-container">
                 <div class="players-container">
-                    <div class=player-name-container>
+                    <div class="player-name-container">
                         <h3>Player1</h3>
                         <input type="text" value="player1">
                     </div>
-                    <div class=player-name-container>
+                    <div class="player-name-container">
                         <h3>Player2</h3>
                         <input type="text" value="player2">
                     </div>
