Created basic memory representation for board and generate it accordingly

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         </div>
     </div>
 </body>
+<script type="module" src="javascript/board.js"></script>
 <script src="javascript/globals.js"></script>
 <script src="javascript/page.js"></script>
-<script src="javascript/table.js"></script>
+<script type="module" src="javascript/table.js"></script>
 </html>
