--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <input type="text" value="player2">
                     </div>
                 </div>
-                <button id="start-game-button" onclick="StartGame()">Start Game</button>
+                <button id="start-game-button">Start Game</button>
             </div>
         </div>
         <div class="game-container">
