Added different colored tile placement

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <button id="description-button">Description</button>
             </div>
         </div>
-        <div class="menu-container" style="display: none">
+        <div class="menu-container">
             <h2>Start page</h2>
             <div class="settings-container">
                 <div class="players-container">
@@ -33,7 +33,7 @@
                 <button id="start-game-button">Start Game</button>
             </div>
         </div>
-        <div class="game-container">
+        <div class="game-container" style="display: none">
             <div class="table-container">
                 <table>
                 </table>
