Added Gamestate and Player classes, refactored js file structure

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </div>
 </body>
-<script type="module" src="javascript/board.js"></script>
+<script type="module" src="javascript/classes/state.js"></script>
 <script src="javascript/globals.js"></script>
 <script src="javascript/page.js"></script>
 <script type="module" src="javascript/table.js"></script>
